fixed spacing between kawaiis and added labels

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,33 @@ $section-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	}
 }
 
+.kawaii-parent {
 
+	display: flex;
+	margin-top: 6rem;
+	
+			.got-kawaii {
+	
+			flex: 1;
+			}
+	
+			.pokemon-kawaii {
+			flex: 2;
+	
+	
+			}
+			.pokemon-kawaii:hover {
+				transform: scale(1.05);
+				transition: .4s ease;
+			}
+	
+			.got-kawaii:hover {
+				transform: scale(1.05);
+				transition: .4s ease;
+			}
+	
+	
+	}
 
 
 
